Fixed events not showing up in IE11

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -429,6 +429,7 @@ section h1 {
 
   .events__upcomming {
     width: 40%;
+    min-height: 500px;
   }
 
   .events__details {
